--- a/about.html
+++ b/about.html
@@ -1,63 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>About – NowZNews</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-  body { margin: 0; background: #0A0A0F; color: #fff; font-family: Arial, sans-serif; }
-  .nav { display:flex; justify-content:space-between; align-items:center; padding:18px 24px; background:#0A0A0F; border-bottom:1px solid #1A1A25; }
-  .logo { font-size:26px; font-weight:900; color:#B100FF; text-shadow:0 0 10px #8A2EFF; }
-  .nav-links a { margin-left:16px; text-decoration:none; color:#D1D1D7; font-size:14px; }
-  .nav-links a:hover { color:#B100FF; }
-  .container { max-width:900px; margin:0 auto; padding:30px 20px 40px; }
-  h1 { font-size:30px; margin-bottom:10px; color:#B100FF; }
-  h2 { font-size:20px; margin-top:24px; color:#B100FF; }
-  p { font-size:14px; line-height:1.6; opacity:0.85; }
-  ul { font-size:14px; opacity:0.85; }
-  .footer { text-align:center; padding:20px; font-size:13px; opacity:0.5; }
-</style>
+  <meta charset="UTF-8">
+  <title>About – NowZNews</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      margin: 0; background:#050810; color:#e5e7eb;
+      font-family: Arial, sans-serif;
+    }
+    header { padding:16px 24px; display:flex; justify-content:space-between;
+      border-bottom:1px solid #1f2937; background:#050810; position:sticky; top:0;
+    }
+    .logo { font-weight:700; font-size:20px; color:#4ade80; }
+    nav a { color:#9ca3af; margin-left:16px; text-decoration:none; }
+    nav a:hover { color:#4ade80; }
+    .section { max-width:800px; margin:0 auto; padding:40px 20px; }
+    h1 { font-size:28px; margin-bottom:10px; color:#fff; }
+    p { line-height:1.6; color:#a1a1aa; }
+  </style>
 </head>
 <body>
 
-<div class="nav">
-  <div class="logo">NOWZNEWS</div>
-  <div class="nav-links">
+<header>
+  <div class="logo">NowZNews</div>
+  <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="privacy.html">Privacy</a>
-    <a href="terms.html">Terms</a>
-    <a href="login.html" style="color:#B100FF;">Login</a>
-  </div>
-</div>
+    <a href="login.html">Creator Login</a>
+  </nav>
+</header>
 
-<div class="container">
+<div class="section">
   <h1>About NowZNews</h1>
-  <p>NowZNews is a neon Gen-Z news outlet that uses AI automation to scan, rank, and broadcast the biggest stories in World, Tech, and US/Canada news.</p>
-
-  <h2>What We Do</h2>
-  <p>Our system:</p>
-  <ul>
-    <li>Collects breaking news from trusted sources</li>
-    <li>Summarizes stories in clear, fast formats</li>
-    <li>Scores content based on trends, virality, and relevance</li>
-    <li>Generates short-form video clips ready for TikTok, Reels, and Shorts</li>
-  </ul>
-
-  <h2>Our Mission</h2>
-  <p>We want to give Gen-Z and young audiences the most important stories in a format that fits today’s attention span: short, visual, and honest.</p>
-
-  <h2>Who Runs NowZNews?</h2>
-  <p>NowZNews is operated by a small independent media team under the Millionaires Media brand, experimenting with AI-powered broadcasting and news automation.</p>
-
-  <h2>Contact</h2>
-  <p>If you have questions, collaborations, or business inquiries, you can reach us at:</p>
-  <p>Email: tararabdullah826@gmail.com</p>
+  <p>NowZNews is a next-generation AI-driven news studio that transforms world events into short-form videos designed for TikTok, YouTube Shorts, and Instagram Reels.</p>
+  <p>Our system scans global news sources, detects trending topics, and generates auto-edited videos with subtitles, narration, and relevant visuals.</p>
+  <p>We believe in rapid information delivery—quick, accurate, and visually engaging.</p>
 </div>
-
-<div class="footer">© 2025 NowZNews – Neon Gen-Z Broadcasting</div>
 
 </body>
 </html>
